<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Inicio">

    <ImageView
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_margin="17dp"
        android:src="@drawable/ic_granos_cafe"
        android:contentDescription="@string/content_description"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cavosh"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/buenos_dias"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cafe"
            android:textColor="@color/flesh"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="48dp"
            android:text="@string/tvCafe"
            android:textColor="@color/flesh"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvCambiarSede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="48dp"
            android:text="@string/cambiar"
            android:textColor="@color/flesh"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/ivNotificacion"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description"
            android:elevation="5dp"
            android:src="@drawable/ic_notificacion"
            app:layout_constraintBottom_toTopOf="@id/tvCambiarSede"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/viNotificacion"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/sh_notificacion_on"
            android:elevation="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/ivNotificacion"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <SearchView
        android:id="@+id/svBuscar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/sh_btn_light_silver"
        android:iconifiedByDefault="false"
        android:searchIcon="@null"
        app:layout_constraintTop_toBottomOf="@id/clHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/ivBuscar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:padding="12dp"
        android:background="@drawable/sh_notificacion_on"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:focusable="true"
        android:elevation="5dp"
        android:src="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/svBuscar"
        app:layout_constraintBottom_toBottomOf="@id/svBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/tvNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/nuevo_inicio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/svBuscar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvOrdenado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/txtFrecuentementeOrdenados"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rvNuevos"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNuevos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_producto_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvNuevo"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrdenados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_producto_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvOrdenado"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>